<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/shape_item">

    <TextView
        android:id="@+id/textNome"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/film_name"
        android:textSize="30sp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextViewEdits" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/film_name_hint"
        android:textColorHint="@color/purple"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textNome" />

    <TextView
        android:id="@+id/textReleaseYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_release_year"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextNome" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextReleaseYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:hint="@string/film_release_year_hint"
        android:textColorHint="@color/purple"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textReleaseYear"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/studio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_studio"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextReleaseYear" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextStudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="textAutoCorrect"
        android:hint="@string/film_studio_hint"
        android:textColorHint="@color/purple"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studio"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_duration"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextStudio" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:hint="@string/film_duration_hint"
        android:textColorHint="@color/purple"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_score"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextDuration" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:hint="@string/film_score_hint"
        android:textColorHint="@color/purple"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_gender"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextScore" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="textAutoCorrect"
        android:hint="@string/film_gender_hint"
        android:textColorHint="@color/purple"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/isBeenWatched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_is_been_watched"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextGender" />

    <RadioGroup
        android:id="@+id/isBeenWatchedRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/isBeenWatched">

        <RadioButton
            android:id="@+id/radioButtonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/button_yes" />

        <RadioButton
            android:id="@+id/radioButtonNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/button_no" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>